# callasof

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  run-clang-format.sh
include/callasof/: callasof.h  parser_callbacks.h
src/: callasof.c  foreach.h  fsm.h  parser_fsm.h
test/: CMakeLists.txt  parser_test.c  parser_test.h  test.c  test_output.h
test/helpers/: convert_lsof_field_output.py
